[project]
name = "armaden"
version = "0.1.0"
description = "Framework and runtime for building dedicated game server applications"
authors = [
    { name = "Stefan Olivier", email = "s.olivier1194@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.14"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
armaden-serve = "armaden.framework.runtime.kernel:bootstrap_http"
armaden-scaffold = "armaden.framework.installer.scaffold:main"
rcon_client = "armaden.network.client:main"
rcon_server = "armaden.network.server:main"

[tool.poetry]
packages = [
    { include = "armaden", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
returns = "^0.28.0"
python-dotenv = "^1.2.2"
apscheduler = "^3.10"
fsspec = "^2026.6.0"
s3fs = "^2026.6.0"
masonite-framework-orm = "^3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
